Search: Fix focus and active states on search button
The focus styles should be on `:focus` to apply when the button is clicked. Remove the border from `:active` to fix a layout shift.

Fixes #117.

--- a/source/wp-content/themes/wporg-parent-2021/sass/blocks/_search.scss
+++ b/source/wp-content/themes/wporg-parent-2021/sass/blocks/_search.scss
@@ -132,15 +132,13 @@
 	.wp-block-search__input,
 	.wp-block-search__button {
 		&:focus {
-			outline: none;
-			outline-offset: unset;
-			background-color: var(--wp--custom--form--search--color--background);
-		}
-
-		&:focus-visible {
 			outline: 1.5px solid var(--local--focus--outline-color);
 			outline-offset: -1.5px;
 			box-shadow: inset 0 0 0 3px var(--local--focus--border-color);
+		}
+
+		&:active {
+			border: none;
 		}
 	}
 
